--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
     <!-- build:css /css/site.css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="upload/upload.css"/>
+    <link rel="stylesheet" href="index.css"/>
     <!-- endbuild -->
     <title>Поиск товаров в Яндекс.Маркете</title>
 </head>
@@ -29,6 +30,7 @@
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
 <script src="bower_components/angular-file-upload/angular-file-upload.js"></script>
+<script src="bower_components/js-xls/dist/xls.full.min.js"></script>
 <script src="upload/upload.js"></script>
 <!-- endbuild -->
 </body>
